tests/snapshots/command__after_long_help.snap
---
source: tests/command.rs
expression: output
---
command cat <<'EOF'
[1m[4mUsage:[0m [1mmyprog[0m

[1m[4mOptions:[0m
  [1m-h[0m, [1m--help[0m
          Print help (see a summary with '-h')

Does really amazing things to great people... but be careful with -R, like, for real, be careful with this!
EOF
exit 0
