tests/snapshots/command__alias.snap
---
source: tests/command.rs
expression: output
---
claptrap_subcommand='test'
claptrap_test_search='true'
