tests/snapshots/command__allow_missing_positional_style_2-1.snap
---
source: tests/command.rs
expression: "util::run(spec, args)"
---
claptrap_foo='foo'
claptrap_bar='bar'
claptrap_baz=('baz1' 'baz2' 'baz3')
