tests/snapshots/command__allow_missing_positional_style_2-2.snap
---
source: tests/command.rs
expression: "util::run(spec, args)"
---
claptrap_baz=('baz1' 'baz2' 'baz3')
