tests/snapshots/command__allow_missing_positional_style_2.snap
---
source: tests/command.rs
expression: output1
---
claptrap_foo='foo'
claptrap_bar='bar'
claptrap_baz=('baz1' 'baz2' 'baz3')
