tests/snapshots/command__allow_missing_positional_with_default.snap
---
source: tests/command.rs
expression: output
---
claptrap_arg2='other'
claptrap_arg1='something'
