tests/snapshots/command__author.snap
---
source: tests/command.rs
expression: output
---
command cat <<'EOF_3527492b'
myprog () Me, me@mymain.com - [1mmyprog[0m
EOF_3527492b
exit 0
